--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 Model/tarin_all_years/prediction-net-state.pt filter=lfs diff=lfs merge=lfs -text
+F:/DeepAR_models/Model/F:/DeepAR_models/Model filter=lfs diff=lfs merge=lfs -text
+F:/DeepAR_models/Model/tarin_all_years/prediction-net-state.pt filter=lfs diff=lfs merge=lfs -text
